pictures should be scaled on phones and tablets now

--- a/index.html
+++ b/index.html
@@ -63,13 +63,18 @@
 								<section id="content" class="main">
 									<h2><b>(Mis)information diffusion and the financial market</b> <br />
 									with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire">Daniel Torren Peraire</a>, <a href="">Code</a></h2>
-									<img src="images/research_background.png" alt="research" width="500" height="300">
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-									
-									<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
+									<img src="images/research_background.png" alt="research" width="50%" height="50%">
+									<p> Work in progress...</p>
 									<h2><b>Machine Learning is an Asset Pricing Model with Heterogenous Agents</b> <br />
 										 <a href="">Code</a></h2>
-									<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+									<p>I study an asset pricing model with heterogeneous agents. 
+										Agents are boundedly rational and form their expectations by choosing simple heuristics 
+										or using a Long Short Term Memory model to approximate the highly non-linear price evolution.
+										Using numerical simulations to analyze the property of the model, 
+										I detect bifurcations leading to periodic and quasi-periodic dynamics. 
+										The model is then estimated on daily Bitcoin data and is able to explain: 
+										(i) a price consistently higher than its fundamental value; 
+										(ii) the boom in price at the end of 2020 and the subsequent excessive volatility period.</p>
 								<!-- </section>
 								<ul class="features">
 									<li>
@@ -99,7 +104,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Teaching</h2>
-									<img src="images/Exercise_example.png" alt="Optimization" width="500" height="300"> 
+									<img src="images/Exercise_example.png" alt="Optimization" width="50%" height="50%"> 
 								</header>
 
 								<ul style="list-style-type:circle;">
