--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<li><a href="#intro" class="active">About me</a></li>
 							<li><a href="#first">Research</a></li>
 							<li><a href="#second">Teaching</a></li>
+							<li><a href="#third">Economic Resources</a></li>
 							<li><a href="#cta">CV</a></li>
 						</ul>
 					</nav>
@@ -139,6 +140,24 @@
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul> -->
+								</footer>
+							</section>
+
+							<!-- Third Section -->
+							<section id="third" class="main special">
+								<header class="major">
+									<h2>Economic Resources</h2>
+								</header>
+
+								<ul style="list-style-type:circle;">
+									<li>These <a href = "https://www.youtube.com/watch?v=o-R86qcQqMw&list=PLAXSVuGaw0KxTEN_cy-RCuEzzRdnF_xtx">lectures by John Cochrane</a> on <b>Asset Pricing</b>;</li>
+									<li>Lectures on programming for <b>Quantitaive Economics</b>in Python and Julia on <a href = "https://quantecon.org/">quantecon</a>.</li>	
+								  </ul> 
+									
+								<footer class="major">
+									<ul class="actions special">
+										<li><a href="resourches.html" class="button">Show me more</a></li>
+									</ul> 
 								</footer>
 							</section>
 
