added teaching and modified email

--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 								<ul style="list-style-type:circle;">
 									<li>Fall 2022: Optimization, PhD in Economics, Ca'Foscari University of Venice</li>
 									<li>Fall 2019: Optimization, PhD in Economics, Ca'Foscari University of Venice</li></li>
-									<li>Fall 2022: Mathematics (in Italian), Bachelor in Economia e Commercio, Ca'Foscari University of Venice</li></li>
-								  </ul> 
+									<li>Fall 2019: Mathematics (in Italian), Bachelor in Economia e Commercio, Ca'Foscari University of Venice</li></li>
+								    <li>Fall 2019: Financial Mathematics (in Italian), Bachelor in Economia e Commercio, Ca'Foscari University of Venice</li></li>
+								</ul> 
 								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
@@ -191,7 +192,7 @@
 								<dt>Address</dt>
 								<dd>Roetersstraat 11 &bull; 1018 WB Amsterdam &bull; NL</dd>			
 								<dt>Email</dt>
-								<dd><a href="#">t.difrancesco@uva.nl</a></dd>
+								<dd><a href="#">t.difrancesco[at]uva.nl</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
