--- a/index.html
+++ b/index.html
@@ -66,16 +66,11 @@
 									with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire">Daniel Torren Peraire</a>, <a href="">Code</a></h2>
 									<img src="images/research_background.png" alt="research" width="50%" height="50%">
 									<p> Work in progress...</p>
-									<h2><b>Machine Learning is an Asset Pricing Model with Heterogenous Agents</b> <br />
-										 <a href="">Code</a></h2>
-									<p>I study an asset pricing model with heterogeneous agents. 
-										Agents are boundedly rational and form their expectations by choosing simple heuristics 
-										or using a Long Short Term Memory model to approximate the highly non-linear price evolution.
-										Using numerical simulations to analyze the property of the model, 
-										I detect bifurcations leading to periodic and quasi-periodic dynamics. 
-										The model is then estimated on daily Bitcoin data and is able to explain: 
-										(i) a price consistently higher than its fundamental value; 
-										(ii) the boom in price at the end of 2020 and the subsequent excessive volatility period.</p>
+									<h2><b>Sentiment-Driven Speculation in Financial Markets with Heterogeneous Beliefs: a Machine Learning approach</b> <br />
+										 <a href="">Working Paper</a></h2>
+									<p>This paper proposes an heterogenous asset pricing model in which different classes of investors coexist and evolve, switching among strategies over time according to a fitness measure. In the presence of boundedly rational agents, with biased forecasts and trend following rules, rational or fundamentalist expectations do not coincide with perfect foresight ones which are not analytically obtainable. The first contribution of this paper is to propose the use of a Long-Short Term Memory Model (LSTM) to approximate the non linear and unknown functional form imposed by the presence of heterogenous investors. It is shown that when speculators use LSTM in their forecast, instead of being fundamentalists, they can reduce volatility at the cost of pushing prices further away from the fundamental price.
+The second contribution of the paper is empirical. Although the presence of so called noise traders in financial markets has been intensely studied, few attempts have been made in measuring their bias. Focusing on the Bitcoin market, we propose to capture the bounded rationality of noise traders by constructing an index of their bias based on textual data from Twitter. Using a dataset of more than ten million tweets containing the word “Bitcoin” we construct the Bitcoin Twitter Sentiment Index (BiTSI) through sentiment analysis in the form of the Valence Aware Dictionary and sEntiment Reasoner (VADER). The BiTSI is shown to be uncorrelated with the main factors capturing expected cryptocurrency returns identified in the literature. This suggests that the index is capturing a unique dimension of the Bitcoin market that is not accounted for in traditional financial models.
+Finally the heterogenous asset pricing model is estimated on daily prices by non-linear least squares, and the results confirm the switching among forecasting rules and the presence of boundedly rational investors. The model captures a significant proportion of the variation in daily returns of the cryptocurrency.</p>
 								<!-- </section>
 								<ul class="features">
 									<li>
@@ -149,10 +144,14 @@
 								<header class="major">
 									<h2>Economic Resources</h2>
 								</header>
+								<p>
+								Resources that I find useful when doing a PhD in Economics.
+								</p>	
 
 								<ul style="list-style-type:circle;">
 									<li>These <a href = "https://www.youtube.com/watch?v=o-R86qcQqMw&list=PLAXSVuGaw0KxTEN_cy-RCuEzzRdnF_xtx">lectures by John Cochrane</a> on <b>Asset Pricing</b>;</li>
 									<li>Lectures on programming for <b>Quantitaive Economics</b>in Python and Julia on <a href = "https://quantecon.org/">quantecon</a>.</li>	
+									<li>This amazing and funny open-source material on <a href = "https://matheusfacure.github.io/python-causality-handbook/landing-page.html">causal inference.</a> </li>
 								  </ul> 
 									
 								<footer class="major">
