new cv and new link to lit rev assistant

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Tommaso Di Francesco</h1>
-						<p>PhD student in Economics <br />
+						<p>Ph.D student in Economics <br />
 							<a href="https://www.uva.nl/en/profile/f/r/t.difrancesco/t.di-francesco.html">University of Amsterdam</a> and <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjrktbM0Yr8AhXbRvEDHURmDxYQFnoECA4QAQ&url=https%3A%2F%2Fwww.unive.it%2Fdata%2Fpeople%2F26217955&usg=AOvVaw3I4o6OKLl29qsCgWLATjSK">Ca'Foscari University of Venice</a><br />
 						Doctoral fellow at <a href="https://epoc-itn.eu/en/about/">EPOC</a>.</p>
 					</header>
@@ -150,6 +150,7 @@
 								</p>	
 
 								<ul style="list-style-type:circle;">
+									<li>An experimental use of GPT-3 for literature review in Economic Research <a href = "https://github.com/TommasoDF/Econ_Literature_Assistant"></a></li>
 									<li>These <a href = "https://www.youtube.com/watch?v=o-R86qcQqMw&list=PLAXSVuGaw0KxTEN_cy-RCuEzzRdnF_xtx">lectures by John Cochrane</a> on <b>Asset Pricing</b>;</li>
 									<li>Lectures on programming for <b>Quantitative Economics</b> in Python and Julia on <a href = "https://quantecon.org/">quantecon</a>.</li>	
 									<li>This amazing and funny open-source material on <a href = "https://matheusfacure.github.io/python-causality-handbook/landing-page.html">causal inference.</a> </li>
