--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								</p>	
 
 								<ul style="list-style-type:circle;">
-									<li>An experimental use of GPT-3 for literature review in Economic Research <a href = "https://github.com/TommasoDF/Econ_Literature_Assistant"></a></li>
+									<li>An experimental use of GPT-3 for literature review in Economic Research on my <a href = "https://github.com/TommasoDF/Econ_Literature_Assistant">github</a></li>
 									<li>These <a href = "https://www.youtube.com/watch?v=o-R86qcQqMw&list=PLAXSVuGaw0KxTEN_cy-RCuEzzRdnF_xtx">lectures by John Cochrane</a> on <b>Asset Pricing</b>;</li>
 									<li>Lectures on programming for <b>Quantitative Economics</b> in Python and Julia on <a href = "https://quantecon.org/">quantecon</a>.</li>	
 									<li>This amazing and funny open-source material on <a href = "https://matheusfacure.github.io/python-causality-handbook/landing-page.html">causal inference.</a> </li>
