new teaching page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/" class="nav-button">Home</a></li>
                 <li><a href="research.html" class="nav-button">Research</a></li>
-                <li><a href="/" class="nav-button">Teaching</a></li>
+                <li><a href="teaching.html" class="nav-button">Teaching</a></li>
                 <li><a href="cv_template.pdf" class="nav-button">CV</a></li>
             </ul>
         </nav>
@@ -23,7 +23,10 @@
         <div class="text-content">
             <p>I am a PhD student in Quantitive Economics at <a href="https://cendef.uva.nl">CeNDEF</a> and <a href="https://www.unive.it/data/persone/26217955">University Ca'Foscari of Venice</a>. 
                 I am purusing a double degree as part of the EU funded ITN <a href="https://epoc-itn.eu">EPOC</a>. My research focuses on Behavioral Macro and Financial models.  I am particularly interested in expectation formation and heterogeneous agent modelling."</p>
-        
+            <!-- alert section about news -->
+            
+
+
             <h3>Contact Information</h3>
             <p>You can contact me by email at  <a href="t.difrancesco@uva.nl">t.difrancesco@uva.nl</a>.</p>
         </div>
