--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/" class="nav-button">Home</a></li>
                 <li><a href="research.html" class="nav-button">Research</a></li>
-                <li><a href="/" class="nav-button">Teaching</a></li>
+                <li><a href="teaching.html" class="nav-button">Teaching</a></li>
                 <li><a href="cv_template.pdf" class="nav-button">CV</a></li>
             </ul>
         </nav>
@@ -31,6 +31,10 @@
         <p>(with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a>)</p>
        
         <!-- Add more content as needed -->
+        <h2>Conferences</h2>
+        <p> (Co-) Organizer of the  <a href="https://epoc-itn.eu/en/doctoral-workshop-2024/programme/">International EPOC Doctoral Workshop in Economics </a></p>
+
+        <img src="images\Venice_pic.jpeg" alt="Descriptive Image Text" class="secondary-image">
     </section>
     <footer>
         <p>&copy; 2024 Tommaso Di Francesco. All rights reserved.</p>
