--- a/teaching.html
+++ b/teaching.html
@@ -23,9 +23,9 @@
         <h2>Using ChatGPT for Teaching</h2>
         <p> I think that as educators we should try to integrate new technologies in our teaching, instead of banning them.
             Peraphs the main problem with Large Language Models is that it is not clear what information they are using to generate their answers.
-            To overcome this problem with <a href = "https://www.unive.it/data/persone/5591370" class="external-link">Paolo Pellizzari</a> we trained
+            To overcome this problem with <a href = "https://www.unive.it/data/persone/5591370">Paolo Pellizzari</a> we trained
             a custom version of GPT 3.5 on the material of the course <a href="https://www.unive.it/data/insegnamento/449593/programma"> [ET4010] Computational Tools for Economics and Finance.</a>
-            The resulting software was made accessible to students as a Virtual Teaching Assitant.
+            The resulting software was made accessible to students as a Virtual Teaching Assistant.
             Have a look at this <a href="https://github.com/TommasoDF/comptef_gpt">repository</a> if you would like to do something similar for your classes.</p>
         <h2>Venice</h2>
         <!-- Your research content goes here -->
