--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
 
         <h2>Work in Progress</h2>
         <h3>(Mis)information diffusion and the financial market</h3>
-        <p>(with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a>)</p>
+        <p>(with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a>)</p> <a href="https://github.com/TommasoDF/TommasoDF.github.io/blob/main/Misinformation_Diffusion.pdf" class="external-link">Current Draft</a> <a href="https://github.com/danielTorren/Misinformation_financial_markets" class="external-link">Code</a>
        
         <!-- Add more content as needed -->
         <h2>Conferences</h2>
