--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LaTeX Inspired Website</title>
+<title>Tommaso Di Francesco</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
     <header>
+        <!-- Hamburger icon -->
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <h1>Tommaso Di Francesco</h1>
         <nav class="main-nav">
             <ul>
@@ -37,7 +43,7 @@
 <footer>
     <p>&copy; 2024 Tommaso Di Francesco. All rights reserved.</p>
 </footer>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script src="script.js"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
 </html>
