--- a/teaching.html
+++ b/teaching.html
@@ -3,12 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Research - Christian Wolf</title>
+<title>Teaching - Tommaso Di Francesco</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
     <header>
+        <!-- Hamburger icon -->
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <h1>Tommaso Di Francesco</h1>
         <nav class="main-nav">
             <ul>
@@ -41,6 +47,6 @@
         <p>&copy; 2024 Tommaso Di Francesco. All rights reserved.</p>
     </footer>
 </div>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script src="script.js"></script>
 </body>
 </html>
