--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
         <h2>Working Papers</h2>
         <!-- Your research content goes here -->
         <h3>Sentiment-Driven Speculation in Financial Markets with Heterogeneous Beliefs: a Machine Learning approach</h3>
-        <p>(with <a href = "https://www.uva.nl/en/profile/h/o/c.h.hommes/c.h.hommes.html" class="external-link">Cars H. Hommes</a>) <a href="https://epoc-itn.eu/downloads/EPOC%20Working%20Paper_Di%20Francesco_10-2023.pdf" class="external-link">Working Paper</a> <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> <a href="https://doi.org/10.21942/uva.25428238.v1" class="external-link">Data</a></p>
+        <p>(with <a href = "https://www.uva.nl/en/profile/h/o/c.h.hommes/c.h.hommes.html" class="external-link">Cars H. Hommes</a>) <a href="https://github.com/TommasoDF/TommasoDF.github.io/blob/main/Sentiment_Driven_Speculation.pdf" class="external-link">Working Paper</a> <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> <a href="https://doi.org/10.21942/uva.25428238.v1" class="external-link">Data</a></p>
 
 
         <h2>Work in Progress</h2>
