changed links and added section

--- a/research.html
+++ b/research.html
@@ -26,15 +26,16 @@
         </nav>
     </header>
     <section class="content">
+
+        <h2>Job Market Paper</h2>
+        <h3>Sticky Information across the Wealth Distribution</h3>
         <h2>Working Papers</h2>
         <!-- Your research content goes here -->
         <h3>Sentiment-Driven Speculation in Financial Markets with Heterogeneous Beliefs: a Machine Learning approach</h3>
-        <p>(with <a href = "https://www.uva.nl/en/profile/h/o/c.h.hommes/c.h.hommes.html" class="external-link">Cars H. Hommes</a>) <a href="https://github.com/TommasoDF/TommasoDF.github.io/blob/main/Sentiment_Driven_Speculation.pdf" class="external-link">Working Paper</a> <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> <a href="https://doi.org/10.21942/uva.25428238.v1" class="external-link">Data</a></p>
+        <p>(with <a href = "https://www.uva.nl/en/profile/h/o/c.h.hommes/c.h.hommes.html" class="external-link">Cars H. Hommes</a>) <a href="Sentiment_Driven_Speculation.pdf" class="external-link">Working Paper</a> <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> <a href="https://doi.org/10.21942/uva.25428238.v1" class="external-link">Data</a></p>
 
-
-        <h2>Work in Progress</h2>
         <h3>(Mis)information diffusion and the financial market</h3>
-        <p>(with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a>) <a href="https://github.com/TommasoDF/TommasoDF.github.io/blob/main/Misinformation_Diffusion.pdf" class="external-link">Current Draft</a> <a href="https://github.com/danielTorren/Misinformation_financial_markets" class="external-link">Code</a></p>
+        <p>(with <a href = "https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a>) <a href="Misinformation_Diffusion.pdf" class="external-link">Current Draft</a> <a href="https://github.com/danielTorren/Misinformation_financial_markets" class="external-link">Code</a></p>
        
         <!-- Add more content as needed -->
         <h2>Conferences</h2>
