--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tommaso Di Francesco</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Tommaso Di Francesco</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-    <header>
-        <!-- Hamburger icon -->
-        <div class="hamburger" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
+        <header>
+            <!-- Hamburger icon -->
+            <div class="hamburger" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <h1>Tommaso Di Francesco</h1>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="/" class="nav-button">Home</a></li>
+                    <li><a href="research.html" class="nav-button">Research</a></li>
+                    <li><a href="teaching.html" class="nav-button">Teaching</a></li>
+                    <li><a href="cv_template.pdf" class="nav-button">CV</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Start of main content area -->
+        <div class="content-container">
+            <div class="left-column">
+                <!-- Main content -->
+                <p>I am a PhD student in Quantitative Economics at <a href="https://cendef.uva.nl">CeNDEF</a> and <a href="https://www.unive.it/data/persone/26217955">University Ca' Foscari of Venice</a>. 
+                I am pursuing a double degree as part of the EU funded ITN <a href="https://epoc-itn.eu">EPOC</a>. My research focuses on Behavioral Macro and Financial models. I am particularly interested in expectation formation and heterogeneous agent modelling.</p>
+                <h3>Contact Information</h3>
+                <p>You can contact me by email at <a href="mailto:t.difrancesco@uva.nl">t.difrancesco@uva.nl</a>.</p>
+            </div>
+            <div class="right-column">
+                <!-- Image in square format -->
+                <div class="profile-image-container">
+                    <img src="images/fototessera_old.jpg" alt="Photo of Tommaso Di Francesco" class="profile-image">
+                </div>
+            </div>
         </div>
-        <h1>Tommaso Di Francesco</h1>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="/" class="nav-button">Home</a></li>
-                <li><a href="research.html" class="nav-button">Research</a></li>
-                <li><a href="teaching.html" class="nav-button">Teaching</a></li>
-                <li><a href="cv_template.pdf" class="nav-button">CV</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="main-content">
-        <div class="text-content">
-            <p>I am a PhD student in Quantitive Economics at <a href="https://cendef.uva.nl">CeNDEF</a> and <a href="https://www.unive.it/data/persone/26217955">University Ca'Foscari of Venice</a>. 
-                I am purusing a double degree as part of the EU funded ITN <a href="https://epoc-itn.eu">EPOC</a>. My research focuses on Behavioral Macro and Financial models.  I am particularly interested in expectation formation and heterogeneous agent modelling."</p>
-            <!-- alert section about news -->
-            
-
-
-            <h3>Contact Information</h3>
-            <p>You can contact me by email at  <a href="t.difrancesco@uva.nl">t.difrancesco@uva.nl</a>.</p>
-        </div>
-        <img src="images\fototessera_old.jpg" alt="Descriptive Image Text" class="main-image">
-    </section>
-    <!-- Rest of your content -->
+        <!-- Rest of your content -->
+   
+    <footer>
+        <p>&copy; 2024 Tommaso Di Francesco. All rights reserved.</p>
+    </footer>
 </div>
-<footer>
-    <p>&copy; 2024 Tommaso Di Francesco. All rights reserved.</p>
-</footer>
-<script src="script.js"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <!-- Optional scripts -->
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
