adding JMP section

--- a/research.html
+++ b/research.html
@@ -29,11 +29,10 @@
                 <div class="paper">
                     <h3><a href="Sticky_Information.pdf" class="paper-title">Sticky Information across the Wealth Distribution</a></h3>
                     <p class="links">
-                        <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> |
-                        <a href="https://doi.org/10.21942/uva.25428238.v1" class="external-link">Data</a>
+                        <a href="" class="external-link">Code</a> 
                     </p>
                     <div class="abstract">
-                        <p>[Abstract of the Job Market Paper goes here.]</p>
+                        <p></p>
                     </div>
                  
                 </div>
