--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <!-- Main content -->
                 <p>I am a PhD student in Quantitative Economics at <a href="https://cendef.uva.nl">CeNDEF</a> and <a href="https://www.unive.it/data/persone/26217955">University Ca' Foscari of Venice</a>. 
                 I am pursuing a double degree as part of the EU funded ITN <a href="https://epoc-itn.eu">EPOC</a>. My research focuses on Behavioral Macro and Financial models. I am particularly interested in expectation formation and heterogeneous agent modelling.</p>
+                <b>I am currently on the the academic job market.</b> Please find my </b>job market paper</b>  <a href="sticky_info.pdf">here</a>.
                 <h3>Contact Information</h3>
                 <p>You can contact me by email at <a href="mailto:t.difrancesco@uva.nl">t.difrancesco@uva.nl</a>.</p>
             </div>
