--- a/research.html
+++ b/research.html
@@ -29,10 +29,22 @@
                 <div class="paper">
                     <h3><a href="Sticky_Information.pdf" class="paper-title">Sticky Information across the Wealth Distribution</a></h3>
                     <p class="links">
-                        <a href="" class="external-link">Code</a> 
                     </p>
                     <div class="abstract">
-                        <p></p>
+                        <p>
+                            This paper investigates the role of wealth-dependent information stickiness 
+                            in the transmission of monetary policy in a Heterogeneous Agent New Keynesian (HANK) model. 
+                            Using survey data, I provide empirical evidence that households do not form expectations according to 
+                            the full-information rational expectations (FIRE) hypothesis but instead exhibit stickiness in updating their information,
+                            with wealthier households updating more frequently. 
+                            I evaluate the effect of this evidence on macroeconomic dynamics using a quantitative model.
+                            My findings reveal that inequality significantly affects the aggregate responses to monetary shocks. 
+                            Specifically, models that neglect heterogeneity in information updating
+                            underestimate both the magnitude and the delay of the peak response to monetary policy shocks. 
+                            Estimating the model by matching simulated impulse response functions (IRFs) to empirical ones 
+                            shows that stickiness is crucial for accurately capturing the dynamics observed in the data.
+
+                        </p>
                     </div>
                  
                 </div>
