--- a/teaching.html
+++ b/teaching.html
@@ -41,6 +41,12 @@
         <p><a href="https://www.unive.it/data/insegnamento/279104/programma">Syllabus</a></p>
         <h4> [ET0046] Mathematics For Economics  2019/2020  </h4> 
         <p><a href="https://www.unive.it/data/insegnamento/382916">Syllabus</a></p>
+        <h2>Amsterdam</h2>
+        <!-- Your research content goes here -->
+        <h4> [6011P0236Y] Mathematics 1 for Economics a.y 2024/2025 </h4> 
+        <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025/zoek-vak/vak/120456">Syllabus</a></p>
+        <h4> [6011P0283Y] Microeconomics for AE </h4>
+        <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025/zoek-vak/vak/120612">Syllabus</a></p>
 
     </section>
     <footer>
