--- a/research.html
+++ b/research.html
@@ -54,6 +54,7 @@
                 <!-- First Working Paper -->
                 <div class="paper">
                     <h3><a href="Sentiment_Driven_Speculation.pdf" class="paper-title">Sentiment-Driven Speculation in Financial Markets with Heterogeneous Beliefs: A Machine Learning Approach</a></h3>
+                    <p>Revise and Resubmit at <em>Journal of Economic Dynamics and Control</em></p>
                     <p class="links">
                         with <a href="https://www.uva.nl/en/profile/h/o/c.h.hommes/c.h.hommes.html" class="external-link">Cars Hommes</a> |
                         <a href="https://github.com/TommasoDF/Repo" class="external-link">Code</a> |
