--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
 
                 <!-- Second Working Paper -->
                 <div class="paper">
-                    <h3><a href="Misinformation_Diffusion.pdf" class="paper-title">(Mis)information Diffusion and the Financial Market</a></h3>
+                    <h3><a href="https://epoc-itn.eu/downloads/EPOC%20Working%20Paper_Di%20Francesco_22-2025.pdf" class="paper-title">(Mis)information Diffusion and the Financial Market</a></h3>
                     <p class="links">
                         with <a href="https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a> |
                         <a href="https://github.com/danielTorren/Misinformation_financial_markets" class="external-link">Code</a>
