final style touch

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <!-- Right: Contact Details -->
         <div class="header-right">
-            <p>PhD Student in Quantitative Economics at CeNDEF and University Ca' Foscari of Venice</p>
-            <p>Contact me at: <strong>t.difrancesco@uva.nl</strong></p>
+            <p>PhD Student in Quantitative Economics at CeNDEF and University Ca' Foscari of Venice.</p>
+            <p>Contact me at: <strong>t.difrancesco@uva.nl.</strong></p>
             <p>Download my CV <a href="cv_template.pdf" target="_blank" class="button-link">here.</a></p>
         </div>
     </div>
@@ -38,7 +38,7 @@
     <!-- Introduction/Bio -->
     <section id="bio">
       <h2>About Me</h2>
-      <p>
+      <p class="justify">
         Welcome! I am a PhD student in Quantitative Economics at the Center for Nonlinear Dynamics in Economics and Finance (CeNDEF) and the University Ca' Foscari of Venice. I am pursuing a double degree as part of the EU-funded ITN EPOC. My research focuses on Behavioral Macro and Financial models, with a particular interest in expectation formation and heterogeneous agent modelling.
       </p>
       <p>
@@ -125,7 +125,7 @@
     <!-- Teaching Section -->
     <section id="teaching">
       <h2>Teaching</h2>
-      <p> I think that as educators we should try to integrate new technologies in our teaching, instead of banning them.
+      <p class="justify"> I think that as educators we should try to integrate new technologies in our teaching, instead of banning them.
             Peraphs the main problem with Large Language Models is that it is not clear what information they are using to generate their answers.
             To overcome this problem with <a href = "https://www.unive.it/data/persone/5591370">Paolo Pellizzari</a> we trained
             a custom version of GPT 3.5 on the material of the course <a href="https://www.unive.it/data/insegnamento/449593/programma"> [ET4010] Computational Tools for Economics and Finance.</a>
