--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
       <p class="justify">
         Welcome! I am a PhD student in Quantitative Economics at the Center for Nonlinear Dynamics in Economics and Finance (CeNDEF) and the University Ca' Foscari of Venice. I am pursuing a double degree as part of the EU-funded ITN EPOC. My research focuses on Behavioral Macro and Financial models, with a particular interest in expectation formation and heterogeneous agent modelling.
       </p>
-      <p>
-        I am currently on the academic job market. You can read my Job Market Paper <a href="sticky_info.pdf" target="_blank">here</a>.
-      </p>
+
     </section>
 
     <hr/>
@@ -53,20 +51,7 @@
       <h2>Research</h2>
       <p><em>Fields:</em> Macroeconomics, Behavioral Economics, Non-linear Dynamics</p>
 
-      <h3>Job Market Paper</h3>
-      <ol>
-        <li>
-          <strong>
-            <a href="sticky_info.pdf" class="paper-title-link">Sticky Information across the Wealth Distribution</a>
-        </strong>
-          <details>
-            <summary>Abstract</summary>
-            <p class="abstract">
-              This paper investigates the role of wealth-dependent information stickiness in the transmission of monetary policy in a Heterogeneous Agent New Keynesian (HANK) model. Using survey data, I provide empirical evidence that households do not form expectations according to the full-information rational expectations (FIRE) hypothesis but instead exhibit stickiness in updating their information, with wealthier households updating more frequently. I evaluate the effect of this evidence on macroeconomic dynamics using a quantitative model. My findings reveal that inequality significantly affects the aggregate responses to monetary shocks. Specifically, models that neglect heterogeneity in information updating underestimate both the magnitude and the delay of the peak response to monetary policy shocks. Estimating the model by matching simulated impulse response functions (IRFs) to empirical ones shows that stickiness is crucial for accurately capturing the dynamics observed in the data.
-            </p>
-          </details>
-        </li>
-      </ol>
+      
 
       <h3>Working Papers</h3>
       <ol>
@@ -119,7 +104,20 @@
             </details>
         </li>
     </ol>
-
+    <h3>Work in Progress</h3>
+      <ol>
+        <li>
+          <strong>
+            <a href="sticky_info.pdf" class="paper-title-link">Sticky Information across the Wealth Distribution</a>
+        </strong>
+          <details>
+            <summary>Abstract</summary>
+            <p class="abstract">
+              This paper investigates the role of wealth-dependent information stickiness in the transmission of monetary policy in a Heterogeneous Agent New Keynesian (HANK) model. Using survey data, I provide empirical evidence that households do not form expectations according to the full-information rational expectations (FIRE) hypothesis but instead exhibit stickiness in updating their information, with wealthier households updating more frequently. I evaluate the effect of this evidence on macroeconomic dynamics using a quantitative model. My findings reveal that inequality significantly affects the aggregate responses to monetary shocks. Specifically, models that neglect heterogeneity in information updating underestimate both the magnitude and the delay of the peak response to monetary policy shocks. Estimating the model by matching simulated impulse response functions (IRFs) to empirical ones shows that stickiness is crucial for accurately capturing the dynamics observed in the data.
+            </p>
+          </details>
+        </li>
+      </ol>
     <hr/>
 
     <!-- Teaching Section -->
