--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         <!-- Your research content goes here -->
         <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025/zoek-vak/vak/120456" class="paper-title-link">[6011P0236Y] Mathematics 1 for Economics a.y 2024/2025</a></p>
         <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025/zoek-vak/vak/120612" class="paper-title-link">[6011P0283Y] Microeconomics for AE </a></p>
-
+        <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025-en/search-course/course/120460" class="paper-title-link">[6011P0283Y] Statistics 1 </a></p>
+        <p><a href="https://studiegids.uva.nl/xmlpages/page/2024-2025-en/search-course/course/120522" class="paper-title-link">[6012B0378Y] Econometrics 2 </a></p>
     </section>
 
     <hr/>
