--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
             <strong>
               <a href="https://epoc-itn.eu/downloads/EPOC%20Working%20Paper_Di%20Francesco_22-2025.pdf" class="paper-title-link">(Mis)information Diffusion and the Financial Market</a>
             </strong> 
+            <p class="paragraph-italic">(<em>R&R at Journal of Economic Behavior & Organization</em>)</p>
             <p class="links">
               with <a href="https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a> |
+          
               <a href="https://github.com/danielTorren/Misinformation_financial_markets" class="external-link">Code</a>
           </p>
             <details>
