--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <strong>
               <a href="https://www.sciencedirect.com/science/article/pii/S0167268125003300" class="paper-title-link">(Mis)information Diffusion and the Financial Market</a>
             </strong> 
-            <p class="paragraph-italic">(<em>Journal of Economic Behavior & Organization</em>)</p>
+            <p class="paragraph-italic">(<em>Journal of Economic Behavior & Organization, 2025</em>)</p>
             <p class="links">
               with <a href="https://portalrecerca.uab.cat/en/persons/daniel-torren-peraire" class="external-link">Daniel Torren Peraire</a> |
           
