--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- Right: Contact Details -->
         <div class="header-right">
-            <p>PhD Student in Quantitative Economics at CeNDEF and University Ca' Foscari of Venice.</p>
+            <p>Postdoc in the Finance group at the University of Bonn.</p>
             <p>Contact me at: <strong>t.difrancesco@uva.nl.</strong></p>
             <p>Download my CV <a href="cv_template.pdf" target="_blank" class="button-link">here.</a></p>
         </div>
@@ -39,7 +39,8 @@
     <section id="bio">
       <h2>About Me</h2>
       <p class="justify">
-        Welcome! I am a PhD student in Quantitative Economics at the Center for Nonlinear Dynamics in Economics and Finance (CeNDEF) and the University Ca' Foscari of Venice. I am pursuing a double degree as part of the EU-funded ITN EPOC. My research focuses on Behavioral Macro and Financial models, with a particular interest in expectation formation and heterogeneous agent modelling.
+        Welcome! I'm a postdoctoral researcher in the Finance group of the Department of Economics at the University of Bonn. 
+        I have a double PhD degree in Economics from the University of Amsterdam and the University Ca' Foscari of Venice. My research focuses on Behavioral Macro and Financial models, with a particular interest in expectation formation and heterogeneous agent modelling.
       </p>
 
     </section>
